impl/tests/macros/wrong_access_right.stderr
error: expected NA, RO, WO, or RW
 --> $DIR/wrong_access_right.rs:9:34
  |
9 |     #[register(len = 2, access = Ro, ty = u16)]
  |                                  ^^
